fix: Menu item contrast

--- a/client/src/css/app.sass
+++ b/client/src/css/app.sass
@@ -33,3 +33,8 @@
         border-color: #2eba21
 fieldset
     border: none
+
+.q-item.q-router-link--active,
+.q-item--active
+    color: #000
+    background-color: #bbdefb
